--- a/Javascript/lab4/q7.html
+++ b/Javascript/lab4/q7.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-      <title>Scores</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
     <script>
         no = 10;
         passmark = 8;
-        count_grage = 1;
-        passed = 0;
-        failed = 0;
+        count_grade = 1;
+        pass = 0;
+        fail = 0;
        
 
-        while (count_grage <= no){
+        while (count_grade <= no){
             result = parseInt(prompt(" Enter Result  1-Pass 2-Fail"))
 
-            if(result == '1'){
-                passed = passed + 1;
-                count_grage = count_grage + 1;
+            if(result == 1){
+                pass = pass + 1;
+                count_grade = count_grade + 1;
             }
-            else if(result == '2'){
-                failed = failed + 1;
-                count_grage = count_grage + 1;
+            else if(result == 2){
+                fail = fail + 1;
+                count_grade = count_grade + 1;
             }else{
                 alert("Enter The right score");
             }
         }
-        output = "Examination Results: <br>  "  + " Passed : " + passed + "<br> " + "Failed : " + failed + " <br> ";
+        output = "Examination Results: <br>  "  + " Passed : " + pass + "<br> " + "Failed : " + fail + " <br> ";
         if(pass >= passmark){
             output = output + " Continue course";
         }else{
